# LittleRpc

./: .gitignore  CMakeLists.txt  README.md
example/: client.cpp  client.py  server.cpp
src/cpp/: little_rpc.cpp  little_rpc.h
src/python/: little_rpc.py
